--- a/jamsepticeye-gj/export_presets.cfg
+++ b/jamsepticeye-gj/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../gamejam_build/Matraphagy.exe"
+export_path="../../Matriphagy/Matriphagy.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
